[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts_scenes/Player.gd" type="Script" id=1]
[ext_resource path="res://audio/Ak47 shoot CSGO Sound Effect.ogg" type="AudioStream" id=2]
[ext_resource path="res://fonts/good times rg.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://fonts/Dosis-Bold.otf" type="DynamicFontData" id=4]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 0.768627, 0.788235, 1 )
metallic_specular = 1.0

[sub_resource type="CapsuleShape" id=3]
radius = 0.5

[sub_resource type="CubeMesh" id=4]
size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=5]
metallic = 0.75
metallic_specular = 1.0
roughness = 0.5

[sub_resource type="CapsuleMesh" id=6]
radius = 0.5
radial_segments = 16
rings = 4

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
albedo_color = Color( 0.945098, 1, 0, 0.470588 )
metallic = 0.5
roughness = 0.2
emission_enabled = true
emission = Color( 1, 0.811765, 0, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="Animation" id=8]
resource_name = "Shooting"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.22, -0.2, -0.5 ), Vector3( 0.22, -0.2, -0.4 ), Vector3( 0.22, -0.2, -0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun/MuzzleFlash:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0.490196, 0.427451, 0.784314 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=10]
size = 14
outline_size = 1
outline_color = Color( 0, 1, 0.788235, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.583641, 0, 0.658203, 0.705882 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=12]
size = 12
outline_size = 1
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 12
outline_size = 1
use_filter = true
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 1 )

[node name="PlayerBody" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="BodyPhysics" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Camera" type="Camera" parent="Head"]
far = 1e+06

[node name="Gun" type="MeshInstance" parent="Head"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.5, 0.22, -0.2, -0.5 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MuzzleFlash" type="MeshInstance" parent="Head/Gun"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2, 0, 0, -2 )
visible = false
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="RifleSound" type="AudioStreamPlayer" parent="Head"]
stream = ExtResource( 2 )
volume_db = -5.0

[node name="GunAnim" type="AnimationPlayer" parent="Head"]
anims/Shooting = SubResource( 8 )

[node name="JumpTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpPanel" type="Panel" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -180.0
margin_top = 40.0
margin_right = 180.0
margin_bottom = 210.0
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpLabel" type="Label" parent="Control/HelpPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.5
margin_top = -79.0
margin_right = 163.5
margin_bottom = 79.0
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Press \"H\" to open/close help panel. Press \"Esc\" to unlock/lock your mouse cursor. Press and Hold \"F\" to continuously spawning the enemies.

You shoot anywhere by pressing \"LMB\" to make enemies panic, then turn around and BANG! Enemies disappeared! So immersive I would say..."
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderPanel" type="Panel" parent="Control"]
margin_left = 10.0
margin_top = 40.0
margin_right = 210.0
margin_bottom = 100.0
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="Control/SliderPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = -22.0
margin_right = 80.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Set Time :"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimerSlider" type="HSlider" parent="Control/SliderPanel"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -22.0
margin_right = -14.0
margin_bottom = -2.0
min_value = 0.5
max_value = 3.0
step = 0.1
value = 0.5
scrollable = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentTimeLabel" type="Label" parent="Control/SliderPanel"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 6.0
margin_top = 3.0
margin_right = 145.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Current Time(s) : "
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
